- split_alpha internals simplified, doc changed
- Support get/set cHRM_XYZ
- (g|s)et_(cHRM_XYZ|chunk_cache_max) problems for old libpngs 
- Support for transform functions png_set_(.*) where possible
- Support png_(read|write)_(end|image|info)
- Add create_(reader|writer) convenience functions
- Support png_set_background, add example of use
- init_io made safer
- Document set_strip_alpha

0.52 2020-12-13

- Bug fixes for iTXt, sCAL chunk tests
- Documentation tidied up

0.50 2020-12-12

- "set_text" issues errors for bad text chunks
- Unify testing of libpng version
- Better tests of setting and getting of tIME chunk
- Round-trip tests for previously-untested pCAL, oFFs, hIST chunks
- get_pCAL now works (was faulty)
- Doc corrections for get_cHRM, oFFs, pHYs chunks
- libpng_supports expanded to cover all macros in libpng 1.6.37
- DIAGNOSTICS section removed from documentation
- Functions, chunk names, etc. in alphabetical order in doc
- Doc "PNG Timestamps" to "tIME", "Palette" to "PLTE"
- get_sBIT no longer writes zeros to empty fields
- Unimplemented but documented "get_color_type" function implemented
- set_PLTE_pointer method removed
- Add read_struct function

0.49 2020-12-10

- Allow user to set compression level
- Add set_compression_* and set_text_compression_*
- Support the "lang" and "lang_key" fields of text chunks
- Remove undocumented "language_tag" and "translated_key" for text chunks
- Documentation work
- Skip all iTXt tests for versions of libpng up to 1.6.3

0.48 2020-11-22

- Makefile.PL and printf fixes
- Add ppport.h to distribution

0.47 2020-09-17

- Added "split_alpha"

0.46 2018-09-15

- Change set_rows to copy the data
- Bug fix for Strawberry Perl builds
- Documentation

0.45 2018-01-04

- Provisional support for png_set_compression_level removed
- Documentation of two undocumented functions and a bug
- Documentation of pnginspect

0.44 2017-06-28

- Revert back to old method of detecting libpng, discard Devel::CheckLib

0.43 2016-02-27
