@@ -13,7 +13,6 @@ our @EXPORT_OK = qw/
 [% FOR function IN functions -%]
 	[% function %]
 [% END -%]
-	color_type_name
 	copy_png
 	create_reader
 	create_writer
